the_project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project-dep
  namespace: project
spec:
  selector:
    matchLabels:
      app: the-project
  template:
    metadata:
      labels:
        app: the-project
    spec:
      # volumes: 
      #   - name: image-pv
      #     persistentVolumeClaim:
      #       claimName: the-project-claim
      containers:
        - name: express-server
          image: PROJECT/BACKEND
          resources:
            requests:
              memory: "150Mi"
              cpu: "100m"
            limits:
              memory: "300Mi"
              cpu: "150m"
        - name: frontend
          image: PROJECT/FRONTEND
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "150Mi"
              cpu: "200m"
