the_project/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-server-ingress
  namespace: project
spec:
  rules:
    - http:
        paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: the-project-svc
              port:
                number: 1234
        - path: /
          pathType: Prefix
          backend:
            service:
              name: the-project-svc
              port: 
                number: 2345
